--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,12 @@
   --button-color-two: #fdd9b5;
 }
 
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Cantarell", sans-serif;
   color: var(--title-color);
@@ -56,22 +62,25 @@ img {
 
 /* ------------ HEADER ------------ */
 .header {
-  position: fixed;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  z-index: 2;
-  color: var(--title-color);
+  z-index: 3;
+  color: #fafafa;
   background-color: rgba(255, 255, 255, 0.5);
+  border-bottom: #c9bee0 1px solid;
 }
-.container {
-}
+
 .header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 5;
 }
 
 .header-logo {
-  color: inherit;
+  color: var(--title-color);
   font-size: 24px;
   padding-top: 24px;
   padding-bottom: 24px;
@@ -84,14 +93,14 @@ img {
   gap: 32px;
 }
 .header-menu-item {
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 
 .header-menu-link {
   color: inherit;
   line-height: 1.5;
   font-size: 20px;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 /* ------------ HERO ------------ */
@@ -108,7 +117,7 @@ img {
   position: absolute;
   top: 0;
   left: 0;
-  width: 50%;
+  width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
   z-index: 1;
@@ -124,38 +133,115 @@ img {
   transform: translate(-50%, -50%);
   z-index: 0;
 }
-.container {
-}
+
 .hero-container {
-}
-.hero-content-wrap {
   position: relative;
-  z-index: 2; /* Помещает контент на передний план */
-  color: white; /* Цвет текста */
-  text-align: center;
-  padding-top: 150px;
+  z-index: 2;
+  color: #fafafa;
+  padding-top: 120px;
 }
+
+.heading-wrap {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  width: 100%;
+}
+
 .hero-title {
-  font-size: 48px;
+  font-size: 54px;
+  flex-shrink: 0;
 }
-.hero-contact-form {
-}
-/* ---------------- */
 
-/* .hero-title::after {
+.hero-heading-line {
+  flex-grow: 1;
+}
+
+.hero-heading-line::after {
   content: "";
-  width: 500px;
+  display: block;
   height: 4px;
-  background-color: var(--button-color-two);
   border-radius: 2px;
-  position: absolute;
-  top: 50%;
-  right: 28px;
-} */
+  background-color: #fafafa;
+}
 
-.hero-image-wrap {
-  /* background-image: url(../img/);
+h2 {
+  display: block;
+  font-size: 36px;
+}
+
+/* ------------------works------------------ */
+.works {
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.works-top {
+}
+/* ------------------------- */
+.works-heading-wrap {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 20px;
+}
+.works-title {
+  font-size: 36px;
+  flex-shrink: 0;
+  color: var(--text-color);
+}
+
+.works-heading-line {
+  flex-grow: 1;
+}
+
+.works-heading-line::after {
+  content: "";
+  display: block;
+  height: 2px;
+  border-radius: 2px;
+  background-color: var(--button-color-two);
+}
+
+/* ------------------------------ */
+.works-content-wrap {
+  position: relative;
+  display: flex;
+  gap: 28px;
+}
+.works-img-wrap {
+  width: 70%;
+  flex-shrink: 0;
+  height: 500px;
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover; */
+  border-radius: 2px;
+  overflow: hidden;
+}
+
+.works-text-wrap {
+  padding: 24px;
+
+  border-radius: 2px;
+  height: fit-content;
+  width: 500px;
+  position: absolute;
+  top: 10%;
+  right: 0;
+  box-shadow: 0 0 2px 1px #eceded;
+  background-color: var(--button-color-two);
+}
+
+.works-text {
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+}
+.works-bottom {
+}
+
+.footer {
+  background-color: var(--button-color-two);
+  height: 300px;
+  background-;
 }
