--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@
   --title-color: #3f3656;
   --text-color: #c9bee0;
   --button-color-one: #ff6f61;
+  --accent: #8a322c;
+  --accent-blue: #22444d;
   --button-color-two: #fdd9b5;
 }
 
@@ -14,7 +16,7 @@
 
 body {
   font-family: "Cantarell", sans-serif;
-  color: var(--title-color);
+  color: var(--accent-blue);
   line-height: 1.5;
   background-color: #fafafa;
 }
@@ -48,7 +50,7 @@ button {
 img {
   display: block;
   max-width: 100%;
-  height: auto;
+  max-height: 100%;
 }
 
 .container {
@@ -73,6 +75,8 @@ img {
 }
 
 .header-container {
+  padding-top: 8px;
+  padding-bottom: 8px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -82,8 +86,8 @@ img {
 .header-logo {
   color: var(--title-color);
   font-size: 24px;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .header-navigation {
@@ -93,14 +97,20 @@ img {
   gap: 32px;
 }
 .header-menu-item {
+  transition: transform 250ms ease-in, color 250ms ease-in;
 }
 
 .header-menu-link {
   color: inherit;
   line-height: 1.5;
   font-size: 20px;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+.header-menu-item:hover {
+  transform: scale(1.1);
+  color: var(--accent-blue);
 }
 
 /* ------------ HERO ------------ */
@@ -138,7 +148,15 @@ img {
   position: relative;
   z-index: 2;
   color: #fafafa;
-  padding-top: 120px;
+  padding: 120px 0 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.hero-text-content {
+  margin-bottom: 120px;
 }
 
 .heading-wrap {
@@ -170,78 +188,140 @@ h2 {
   font-size: 36px;
 }
 
+.hero-link {
+  padding: 12px 56px;
+  background-color: #fafafa;
+  font-size: 28px;
+  color: var(--accent-blue);
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: -0.04em;
+  border-radius: 12px;
+  align-self: center;
+  transition: transform 250ms ease-in;
+}
+
+.hero-link:hover {
+  transform: scale(1.1);
+}
+
 /* ------------------works------------------ */
 .works {
-  padding-top: 48px;
-  padding-bottom: 48px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
-.works-top {
-}
-/* ------------------------- */
-.works-heading-wrap {
+.works-container {
   display: flex;
-  gap: 30px;
-  align-items: center;
-  width: 100%;
-  margin-bottom: 20px;
+  gap: 36px;
 }
-.works-title {
-  font-size: 36px;
+
+.works-left {
+  width: calc((100% - 24px) * 0.4);
   flex-shrink: 0;
-  color: var(--text-color);
 }
 
-.works-heading-line {
-  flex-grow: 1;
-}
-
-.works-heading-line::after {
-  content: "";
-  display: block;
-  height: 2px;
-  border-radius: 2px;
-  background-color: var(--button-color-two);
-}
-
-/* ------------------------------ */
-.works-content-wrap {
+.works-overlay-left {
+  border-radius: 12px;
   position: relative;
-  display: flex;
-  gap: 28px;
-}
-.works-img-wrap {
-  width: 70%;
-  flex-shrink: 0;
-  height: 500px;
-  background-repeat: no-repeat;
-  border-radius: 2px;
+  width: 100%;
   overflow: hidden;
+  max-height: 624px;
+  box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.8);
 }
 
 .works-text-wrap {
+  text-align: center;
   padding: 24px;
-
-  border-radius: 2px;
+  width: 100%;
   height: fit-content;
-  width: 500px;
   position: absolute;
-  top: 10%;
-  right: 0;
-  box-shadow: 0 0 2px 1px #eceded;
-  background-color: var(--button-color-two);
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.6);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translatey(-100%);
+}
+
+.works-title {
+  margin-bottom: 8px;
 }
 
 .works-text {
-  font-size: 20px;
   line-height: 1.2;
-  text-align: center;
-}
-.works-bottom {
 }
 
+.works-right {
+  width: calc((100% - 36px) * 0.6);
+  flex-shrink: 0;
+}
+
+.works-overlay-right {
+  border-radius: 12px;
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  max-height: 468px;
+  margin-bottom: 36px;
+  box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.8);
+}
+
+.works-overlay-left:hover .works-text-wrap,
+.works-overlay-right:hover .works-text-wrap {
+  transform: translatey(0%);
+}
+
+/* ------------------------- */
+/* .portfolio-item:hover .overlay {
+  transform: translatey(0%);
+} */
+
+/* .overlay-wrap {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+} */
+
+.overlay {
+  /* position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translatey(100%); */
+}
+/* -------------------------- */
+
+.works-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #22444d;
+  height: 120px;
+  color: #fafafa;
+  font-size: 28px;
+  background-color: var(--accent-blue);
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: -0.04em;
+  border-radius: 12px;
+  box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.8);
+  transition: background-color 250ms ease-in;
+}
+
+.works-link:hover {
+  background-color: #3b7383;
+}
+
+/* ---------------footer------------ */
 .footer {
-  background-color: var(--button-color-two);
+  background-color: var(--accent-blue);
   height: 300px;
-  background-;
 }
