--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,9 @@
 :root {
-  --main-color: #dee2d7;
-  --title-color: #3f3656;
-  --text-color: #c9bee0;
-  --button-color-one: #ff6f61;
-  --accent: #8a322c;
-  --accent-blue: #22444d;
-  --button-color-two: #fdd9b5;
+  --light-grey: #edf0f5;
+  --title-color: #415167;
+  --text-color: #151d28;
+  --accent: #c7a17a;
+  --accent-hover: #f9f5e8;
 }
 
 *,
@@ -16,7 +14,7 @@
 
 body {
   font-family: "Cantarell", sans-serif;
-  color: var(--accent-blue);
+  color: var(--text-color);
   line-height: 1.5;
   background-color: #fafafa;
 }
@@ -69,9 +67,11 @@ img {
   left: 0;
   width: 100%;
   z-index: 3;
-  color: #fafafa;
+  color: #fff;
   background-color: rgba(255, 255, 255, 0.5);
-  border-bottom: #c9bee0 1px solid;
+  /* background-color: rgba(65, 81, 103, 0.8); */
+
+  /* border-bottom: #c9bee0 1px solid; */
 }
 
 .header-container {
@@ -110,7 +110,7 @@ img {
 
 .header-menu-item:hover {
   transform: scale(1.1);
-  color: var(--accent-blue);
+  color: var(--title-color);
 }
 
 /* ------------ HERO ------------ */
@@ -157,46 +157,35 @@ img {
 
 .hero-text-content {
   margin-bottom: 120px;
-}
-
-.heading-wrap {
-  display: flex;
-  gap: 30px;
-  align-items: center;
-  width: 100%;
+  text-transform: uppercase;
 }
 
 .hero-title {
   font-size: 54px;
-  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  padding: 0 24px;
+  color: #fff;
 }
 
-.hero-heading-line {
-  flex-grow: 1;
-}
-
-.hero-heading-line::after {
-  content: "";
-  display: block;
-  height: 4px;
-  border-radius: 2px;
-  background-color: #fafafa;
-}
-
-h2 {
-  display: block;
-  font-size: 36px;
+.hero-title span {
+  background-color: rgba(238, 170, 102, 0.8);
+  padding: 0 24px;
+  margin-left: -24px;
+  border-radius: 4px;
+  width: fit-content;
+  color: #2f3a4a;
 }
 
 .hero-link {
   padding: 12px 56px;
-  background-color: #fafafa;
+  background-color: rgba(65, 81, 103, 0.8);
   font-size: 28px;
-  color: var(--accent-blue);
+  color: var(--light-grey);
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: -0.04em;
-  border-radius: 12px;
+  border-radius: 4px;
   align-self: center;
   transition: transform 250ms ease-in;
 }
@@ -222,7 +211,7 @@ h2 {
 }
 
 .works-overlay-left {
-  border-radius: 12px;
+  border-radius: 4px;
   position: relative;
   width: 100%;
   overflow: hidden;
@@ -257,7 +246,8 @@ h2 {
 }
 
 .works-overlay-right {
-  border-radius: 12px;
+  border-radius: 4px;
+  padding: 12px;
   position: relative;
   width: 100%;
   overflow: hidden;
