--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,19 @@ img {
   margin: 0 auto;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 /* ------------ HEADER ------------ */
 .header {
   position: absolute;
@@ -88,10 +101,12 @@ img {
   font-size: 24px;
   padding-top: 16px;
   padding-bottom: 16px;
+  outline: none;
 }
 
 .header-navigation {
 }
+
 .header-menu-list {
   display: flex;
   gap: 32px;
@@ -157,7 +172,7 @@ img {
 
 .hero-text-content {
   margin-bottom: 120px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 .hero-title {
@@ -305,17 +320,103 @@ img {
 /* .works-link:hover {
   background-color: #3b7383;
 } */
-/* --------------Commende---------------- */
-.commende {
+/* --------------EVENTS---------------- */
+.events {
   padding-top: 60px;
-  padding-bottom: 60px;
-  height: 300px;
+  padding-bottom: 80px;
+  /* height: 300px; */
   background: linear-gradient(
     to right,
-    rgba(238, 170, 102, 0.3) 70%,
+    rgba(238, 170, 102, 0.7) 70%,
     rgb(237, 240, 245) 70%
   );
 }
+
+.container {
+}
+
+.section-title {
+  text-align: center;
+  font-size: 36px;
+  color: #2f3a4a;
+  margin-bottom: 40px;
+}
+
+.content-container {
+  margin-left: 120px;
+}
+
+.events-container {
+  /* border: red 1px solid; */
+  max-width: 860px;
+  min-height: 300px;
+  display: flex;
+  margin: 0 auto;
+  border-radius: 4px;
+  /* overflow: hidden; */
+  box-shadow: 4px 4px 18px 12px rgba(0, 0, 0, 0.3);
+}
+
+.event {
+  position: relative;
+  flex-grow: 1;
+  padding: 48px 24px 48px 224px;
+  background-color: #fafafa;
+  color: #2f3a4a;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.first-event {
+}
+
+.event-image {
+  position: absolute;
+  top: 30px;
+  left: -120px;
+  border-radius: 50%;
+  object-fit: cover;
+  /* box-shadow: 4px 4px 8px 12px rgba(0, 0, 0, 0.3); */
+  /* box-shadow: 0 0 16px 8px rgba(0, 0, 0, 0.1); */
+}
+
+.event-subtitle {
+  font-size: 24px;
+  margin-bottom: 18px;
+}
+.event-text {
+  font-size: 18px;
+}
+
+.btn-container {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  overflow: hidden;
+}
+.events-btn {
+  flex-grow: 1;
+  background-color: #edf0f5;
+  border: none;
+  text-transform: capitalize;
+  font-size: 36px;
+  color: #2f3a4a;
+}
+
+.events-btn:nth-child(2) {
+  background-color: #fafafa;
+}
+
+.events-btn:nth-child(3) {
+  box-shadow: inset 8px 8px 8px rgba(0, 0, 0, 0.1);
+}
+
+.events-btn:nth-child(1) {
+  box-shadow: inset 8px 0 8px rgba(0, 0, 0, 0.1);
+}
+/* --------------WARE-------------------- */
 
 .ware {
   padding-top: 60px;
