--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,6 @@ img {
 
 .hero-text-content {
   margin-bottom: 120px;
-  /* text-transform: uppercase; */
 }
 
 .hero-title {
@@ -181,6 +180,10 @@ img {
   flex-direction: column;
   padding: 0 24px;
   color: #fff;
+  position: relative;
+  opacity: 0;
+  transform: translateX(-100%);
+  transition: transform 1s ease-out, opacity 1s ease-out;
 }
 
 .hero-title span {
@@ -190,6 +193,21 @@ img {
   border-radius: 4px;
   width: fit-content;
   color: #2f3a4a;
+  position: relative;
+  display: inline-block;
+  opacity: 0;
+  transform: translateX(100%);
+  transition: transform 1s ease-out 0.3s, opacity 1s ease-out 0.3s;
+}
+
+.hero-title.visible {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.hero-title.visible span {
+  opacity: 1;
+  transform: translateX(0);
 }
 
 .hero-link {
@@ -211,15 +229,38 @@ img {
 
 /* ------------------works------------------ */
 .works {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  height: 300px;
-  /* background: #c7a17a; */
+  padding-top: 80px;
+  padding-bottom: 100px;
   background: linear-gradient(
     to right,
     rgba(65, 81, 103, 0.3) 30%,
     rgb(237, 240, 245) 30%
   );
+}
+
+.works-container {
+}
+
+.works-list {
+  display: flex;
+  gap: 64px;
+  line-height: 1.3;
+}
+
+.works-item {
+  width: calc((100% - 96px) / 3);
+  text-align: justify;
+}
+
+.works-subtitle {
+  font-size: 20px;
+  margin-bottom: 18px;
+  color: #2f3a4a;
+}
+
+.works-text {
+  font-size: 16px;
+  color: #2f3a4a;
 }
 
 /* .works-container {
@@ -322,17 +363,14 @@ img {
 } */
 /* --------------EVENTS---------------- */
 .events {
-  padding-top: 60px;
-  padding-bottom: 80px;
+  padding-top: 80px;
+  padding-bottom: 100px;
   /* height: 300px; */
   background: linear-gradient(
     to right,
     rgba(238, 170, 102, 0.7) 70%,
     rgb(237, 240, 245) 70%
   );
-}
-
-.container {
 }
 
 .section-title {
@@ -357,10 +395,10 @@ img {
   box-shadow: 4px 4px 18px 12px rgba(0, 0, 0, 0.3);
 }
 
-.event {
+.all-events {
   position: relative;
   flex-grow: 1;
-  padding: 48px 24px 48px 224px;
+  padding: 48px 24px 48px 144px;
   background-color: #fafafa;
   color: #2f3a4a;
   border-top-left-radius: 4px;
@@ -392,30 +430,36 @@ img {
   display: flex;
   flex-direction: column;
   width: 20%;
+  flex-shrink: 0;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   overflow: hidden;
 }
+
 .events-btn {
   flex-grow: 1;
-  background-color: #edf0f5;
   border: none;
   text-transform: capitalize;
   font-size: 36px;
   color: #2f3a4a;
 }
 
-.events-btn:nth-child(2) {
+.is-active {
   background-color: #fafafa;
 }
 
-.events-btn:nth-child(3) {
+.not-active {
+  background-color: #edf0f5;
+  box-shadow: inset 8px 0 8px rgba(0, 0, 0, 0.1);
+}
+
+/* .events-btn:nth-child(3) {
   box-shadow: inset 8px 8px 8px rgba(0, 0, 0, 0.1);
 }
 
 .events-btn:nth-child(1) {
   box-shadow: inset 8px 0 8px rgba(0, 0, 0, 0.1);
-}
+} */
 /* --------------WARE-------------------- */
 
 .ware {
@@ -434,3 +478,24 @@ img {
   background-color: rgba(65, 81, 103, 1);
   height: 300px;
 }
+
+/* -----------------CHAT_BUTTON----------------- */
+/* .manager-chat-btn {
+  position: fixed;
+  z-index: 999;
+  bottom: 32px;
+  right: 32px;
+  padding: 12px 16px;
+  border: none;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #03a9f4;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 1px -2px,
+    rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
+}
+
+.manager-chat-btn:hover {
+  background-color: #0288d1;
+} */
